css/style.css
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

.flex{
    display: flex;
    flex-direction: row;
}

.flex-end{
    justify-content: flex-end;
}

.space-between{
    justify-content: space-between;
}

.space-around{
    justify-content: space-around;
}

.column{
    display: flex;
    flex-direction: column;
}

.justify-center{
    justify-content: center;
}

.align-center{
    align-items: center;
}

.blue-button{
    background-color:#0061ff;
    color: white;
    padding: 5px 7px;
}

span.blue-button{
    width: 61%;
}

div.jumbotron-description>div.column span{
    margin-bottom: 25px;
}
header{
    background-color: white;
}

.logo-image{
    width: 80%;
    filter: contrast(1.5);
}

.nav-right,
.nav-left{
    width: 28%;
}

.nav-right,
.nav-left{
    align-items: center;
}

.nav-right{
    padding-left: 70px;
}
nav{
    padding: 18px 20px;
}

.jumbotron{
    background-color:#b4d0e7;
    padding-top: 60px;
}

.jumbotron-container{
    width: 60%;
    margin: 0 auto;
}

.jumbotron-container>h1{
    font-size: 63px;
    padding-right: 100px;
    font-family: 'Open Sans', sans-serif;
    font-weight: 800;
    margin-bottom: 40px;
}

.icon-arrow{
    font-size: 2.5rem;
    font-weight: 500;
}

.arrow-container{
    margin: 15px 0;
}

.jumbotron-description{
    width: 30%;
}

.jumbotron-image-container{
    width:70% ;
    padding-right: 30px;
}


.wrap{
    flex-wrap: wrap;
}

.jumbo-image{
    width: 100%;
}

.container{
    width: 50%;
    margin: 0 auto;
}

.bg-green{
    background-color: greenyellow;
}

.business-section{
    height: 950px;
    margin-top: 130px;
}

.business-plans{
    height: 60%;
}
.business-plans div.column{
    width: calc((100% / 3) - 40px) ;
    background-color: deeppink;
    height: 100%;
    border: 1px solid black;
    
}

div.plan-title{
    width: 100%;
    height: 7%;
    text-align: center;
    border: 1px solid black;
}

.enterprise{
    width: 100%;
    height: 25%;
    background-color: darkorchid;
    border: 1px solid black;
}

.find-partner{
    margin-top: 130px;
    height: 400px;
    background-color: rgb(239, 181, 35);
}

.find-partner-image{
    width: 60%;
    background-color: rgb(196, 255, 222);
}

.find-partner-description{
    width: 40%;
    background-color: crimson;
}

.dropbox-business{
    margin-top: 130px;
    height: 600px;
    background-color: gold;
}

.dropbox-business-item{
    width:calc((100% / 3) - 20px);
    text-align: center;
    background-color: aqua;    
}

div.dropbox-business-item:nth-child(1),
div.dropbox-business-item:nth-child(2),
div.dropbox-business-item:nth-child(3){
    margin-bottom: 30px;
}

.dropbox-link{
    margin-top: 130px;
    height: 200px;
    background-color: azure;
}

.business-item-container{
    height: 90%;
    margin-top: 38px;
}

.boxes{
    height: 563px;
    background-color: beige;
    margin-top: 130px;
}

.boxes>div{
    width: calc(100% / 3);
    background-color: darkviolet;
    border: 1px solid black;
}

.boxes>div div{
    width: calc(100% / 2);
    background-color: chartreuse;
    border: 1px solid black;
}

.free-try{
    height: 250px;
    background-color: rgb(13, 171, 171);
}

.free-try-item{
    height: 100%;
}
.free-try-item div{
    width: calc((100% / 2) - 40px);
    background-color: blue;
    text-align: center;
    height: 50%;
}

.frequent-questions{
    height: 300px;
    background-color: cadetblue;
    margin-top: 130px;
}

.accordion-container{
    height: 100%;
}

.accordion-container>div{
    width: 100%;
    background-color: yellow;
    border: 1px solid black;
    border-left: 0;
    border-right: 0;
}

footer{
    background-color: black;
    color: white;
    height: 500px;
    margin-top: 130px;
    padding-top: 70px;
}

section.contacts ul{
    list-style: none;
}

section.contacts h3{
    margin-bottom: 30px;
}

section.contacts ul>li{
    margin-bottom: 25px;
}

.footer-container{
    width: 65%;
    margin: 0 auto;
}

